# Virtual_Trackpad_for_KDE_Plasma

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cursor_controller.cpp  cursor_controller.h  install.sh  launch_virtual_trackpad.sh  main.cpp  setup_kwin_rules.sh  simple_CMakeLists.txt  simple_cursor_controller.cpp  uinput_cursor_controller.cpp  uinput_cursor_controller.h  virtual_trackpad.qml
package/: metadata.json
package/contents/ui/: CursorBackend.qml  cursormanager.cpp  cursormanager.h  main.qml  main_minimal.qml  main_simple.qml
simple_build/: main.cpp  simple_cursor_controller.h  virtual_trackpad_app.qml
simple_build/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
